# autoposting

./: .env.example  .env.prod  .gitignore  PROJECT_SPEC.md  README.md  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  restore.sh  test.sh
backend/: Dockerfile  pyproject.toml  requirements.test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py  002_moscow_facts.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/api/: __init__.py  ai.py  analytics.py  auth.py  censorship.py  channels.py  content_types.py  posts.py  products.py  queue.py  settings.py
backend/app/models/: __init__.py  analytics.py  censorship.py  channel.py  post.py  user.py
backend/app/schemas/: channel.py  post.py  user.py
backend/app/services/: __init__.py
backend/app/services/ai/: __init__.py  glm.py
backend/app/services/censorship/: __init__.py  service.py
backend/app/services/content/: __init__.py  (+7 more)
backend/app/tasks/: analytics_tasks.py  celery_app.py  cleanup_tasks.py  content_tasks.py  publish_tasks.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_api.py
backend/tests/test_api/: test_ai.py  test_analytics.py  test_auth.py  test_censorship.py  test_channels.py  test_content_types.py  test_posts.py  test_products.py  test_queue.py  test_settings.py
backend/tests/test_integration/: test_full_workflow.py
backend/tests/test_models/: test_models.py
backend/tests/test_services/: test_ai_service.py  test_censorship.py
backend/tests/test_utils/: test_security.py
(+42 files in other folders)
